--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
-beautifulsoup4==4.12.3
-certifi==2024.8.30
-charset-normalizer==3.4.0
-frozendict==2.4.6
-html5lib==1.1
-idna==3.10
-joblib==1.4.2
-lxml==5.3.0
-multitasking==0.0.11
-numpy==2.1.2
-pandas==2.2.3
-peewee==3.17.7
-platformdirs==4.3.6
-python-dateutil==2.9.0.post0
-pytz==2024.2
-requests==2.32.3
-scikit-learn==1.5.2
-scipy==1.14.1
-six==1.16.0
-soupsieve==2.6
-threadpoolctl==3.5.0
-tzdata==2024.2
-urllib3==2.2.3
-webencodings==0.5.1
-yfinance==0.2.46
+beautifulsoup4~=4.12.3
+certifi~=2024.8.30
+charset-normalizer~=3.4.0
+frozendict~=2.4.6
+html5lib~=1.1
+idna~=3.10
+joblib~=1.4.2
+lxml~=5.3.0
+multitasking~=0.0.11
+numpy~=1.26.4
+pandas~=2.1.1
+peewee~=3.17.7
+platformdirs~=4.3.6
+python-dateutil~=2.9.0.post0
+pytz~=2024.2
+requests~=2.32.3
+scikit-learn~=1.5.2
+scipy~=1.14.1
+six~=1.16.0
+soupsieve~=2.6
+threadpoolctl~=3.5.0
+tzdata~=2024.2
+urllib3~=2.2.3
+webencodings~=0.5.1
+yfinance~=0.2.43
+keras~=3.5.0
+keras-tuner~=1.4.7
+matplotlib~=3.8.0
