--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,8 @@ keras~=3.5.0
 keras-tuner~=1.4.7
 matplotlib~=3.8.0
 tensorflow~=2.17.0
-fastapi~=0.115.3
-pydantic~=2.9.2
-uvicorn~=0.32.0
+fastapi~=0.112.2
+pydantic~=2.7.1
+uvicorn~=0.30.6
+python-dotenv~=0.21.0
+cachetools~=5.3.3
