--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ pandas~=2.1.1
 peewee~=3.17.7
 platformdirs~=4.3.6
 python-dateutil~=2.9.0.post0
-pytz~=2024.2
+pytz~=2024.1
 requests~=2.32.3
 scikit-learn~=1.5.2
 scipy~=1.14.1
@@ -32,3 +32,4 @@ pydantic~=2.7.1
 uvicorn~=0.30.6
 python-dotenv~=0.21.0
 cachetools~=5.3.3
+schedule~=1.2.2
