Updated .env and settings.py

--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 
-_SEED=6
-_TUNING_HISTORIES_DIR="tuning_histories"
-_MODELS_DIR="models"
-_IP="0.0.0.0"
-_PORT=8000
+SEED=6
+
+TUNING_HISTORIES_DIRECTORY="tuning_histories"
+
+MODELS_DIRECTORY="models"
+
+IP="0.0.0.0"
+
+PORT=8000
